[tool.poetry]
name = "repl_nix_ytdl-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ffmpeg = "^1.4"
Flask = "^2.3.3"
requests = "^2.31.0"
yt-dlp = "^2023.7.6"
discord = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
